# buddy

./: .env.example  .gitignore  .pre-commit-config.yaml  HISTORY.md  INVARIANTS.md  Makefile  README.md  TASKS.md  buddy  ledger.yaml  pyproject.toml
.github/workflows/: ci.yml
hooks/: pre-commit
src/buddy/: __init__.py  __main__.py  app.py  cli.py  config.py  creature.py  critters.py  devsheet.py  dialogue.py  events.py  feeds.py  logging_config.py  render.py  stage.py
tests/: test_app.py  test_app_snapshot.py  test_cli.py  test_core_is_framework_free.py  test_creature.py  test_critters.py  test_default_is_passive.py  test_dialogue.py  test_events.py  test_feeds.py  test_logging_config.py  test_stage.py
